# dbgen

./: pyproject.toml
dbgen/: builder.py  cli.py
dbgen/generator/: go.py
dbgen/utils/: functions.py
examples/: db.yaml  docker-compose.yaml  mg.py  test.py
